# OperativsystemLab3

./: CMakeLists.txt  Makefile  disk.cpp  filesystem  fs.cpp  fs.h  test1  test2  test3  test4  test5
Backup/: fs.cpp  fs.h
